[package]
name = "lpc-model"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["lpfs/std"]
derive = []
# Thread-local ambient revision for downstream test binaries (dev-dependencies
# only): isolates parallel tests that set/advance the revision clock.
test-support = ["std"]
# JSON Schema for model types (host-side tooling)
schema-gen = ["std", "dep:schemars", "lp-collection/schemars"]

[dependencies]
lp-collection = { workspace = true, features = ["serde"] }
base64 = { workspace = true }
hashbrown = { workspace = true }
serde = { workspace = true, features = ["derive"] }
schemars = { workspace = true, optional = true }
lpc-slot-macros = { path = "../lpc-slot-macros" }
lpfs = { path = "../../lp-base/lpfs", default-features = false }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"

[build-dependencies]
lpc-slot-codegen = { path = "../lpc-slot-codegen" }

[lints]
workspace = true
