[package]
name = "lpc-node-registry"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["lpc-model/std", "lpfs/std"]

[dependencies]
lpc-model = { path = "../lpc-model", default-features = false }
lpfs = { path = "../../lp-base/lpfs", default-features = false }

[lints]
workspace = true
