[package]
name = "lpc-node-registry"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std", "diff"]
std = ["lpc-model/std", "lpfs/std"]
# Host/CI harness: project snapshot diff and equivalence gate. Omit on embedded.
diff = []

[[test]]
name = "project_diff"
required-features = ["diff"]

[dependencies]
lpc-model = { path = "../lpc-model", default-features = false }
lpfs = { path = "../../lp-base/lpfs", default-features = false }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
