[package]
name = "lpc-shared"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["lpfs/std", "toml/std"]

[dependencies]
libm = "0.2"
log = { workspace = true, default-features = false }
lpc-model = { path = "../lpc-model", default-features = false }
lpc-wire = { path = "../lpc-wire", default-features = false }
lpc-source = { path = "../lpc-source", default-features = false }
lpfs = { path = "../../lp-base/lpfs", default-features = false }
lps-shared = { path = "../../lp-shader/lps-shared", default-features = false }
serde = { workspace = true, features = ["derive"] }
toml = { version = "0.9", default-features = false, features = ["parse", "serde", "display"] }

[lints]
workspace = true
